--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "node-fetch": "^2.7.0",
     "node-koyeb-api": "^1.0.7",
     "node-webpmux": "^3.2.0",
-    "pastebin-js": "^1.0.6",
+    "pastebin-api": "^7.0.0",
     "pg": "^8.12.0",
     "pino": "^8.1.0",
     "pm2": "^5.4.2",
